[lworld] AndLNode::Identity optimization does not handle top input

XMLWordPrintable

      # assert(_base >= AnyPtr && _base <= KlassPtr) failed: Not a pointer

      Current CompileTask:
      C2: 33502 4219 b compiler.valhalla.inlinetypes.TestNewAcmp::testNull03_3 (15 bytes)

      Stack: [0x00007fbd483fc000,0x00007fbd484fd000], sp=0x00007fbd484f7750, free space=1005k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x156f189] AndLNode::Identity(PhaseGVN*)+0x759
      V [libjvm.so+0x16bfcc2] PhaseIterGVN::transform_old(Node*)+0x4c2
      V [libjvm.so+0x16b83ee] PhaseIterGVN::optimize()+0x7e
      V [libjvm.so+0xa2ea01] Compile::inline_incrementally_cleanup(PhaseIterGVN&)+0x781
      V [libjvm.so+0xa2f4e9] Compile::inline_incrementally(PhaseIterGVN&)+0x289
      V [libjvm.so+0xa36752] Compile::Optimize()+0x412
      V [libjvm.so+0xa397bd] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x199d
      V [libjvm.so+0x85720c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
      V [libjvm.so+0xa49670] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xca0
      V [libjvm.so+0xa4a178] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x196d816] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1974560] Thread::call_run()+0x100
      V [libjvm.so+0x162bc86] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: