8257154: [lworld] AndLNode::Identity optimization does not handle top input